2003-07-10  Sam Steingold  <sds@gnu.org>

	* error.d (check_fdefinition): handle :CONTINUE restart from
	check_value()
	* condition.lisp (check-value): permit :CONTINUE restart when the
	place is (FDEFINITION ...)

2003-07-09  Sam Steingold  <sds@gnu.org>

	* errwin32.d (OS_error, OS_file_error, SOCK_error):
	avoid a warning by calling NOTREACHED at the end

2003-07-08  Sam Steingold  <sds@gnu.org>

	* configure: pass --win32gcc to makemake instead of ${target}
	* makemake.in: rely on autoconf for win32gcc

2003-07-08  Sam Steingold  <sds@gnu.org>

	* predtype.d (equalp): fixed a crash in (EQUALP '(0 1) '(#P""))

2003-07-08  Sam Steingold  <sds@gnu.org>

	* m4/filecharset.m4: avloid ":" on __MINGW32__
	just like we do with __CYGWIN32__

2003-07-08  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-MAP-on-CARs, c-MAP-on-LISTs): fixed the
	2003-02-09 patch: avoid bytecode duplication

2003-07-03  Sam Steingold  <sds@gnu.org>

	* makemake.in (testsuite): pass LEXE to make in suite

2003-07-02  Sam Steingold  <sds@gnu.org>

	* control.d (PROCLAIM): fixed STACK indexing for CONSTANT-(NOT)INLINE

2003-07-02  Arseny Slobodjuck  <ampy@ich.dvo.ru>

	* pathname.d (directory_namestring_parts) [WIN32_NATIVE,
	PATHNAME_UNIX]: include host parts.
	(whole_namestring): do not call host_namestring_parts when
	directory_namestring_parts includes it.
	(assure_dir_exists) [WIN32_NATIVE]: fixed bugs.
	(assure_dir_exists) [PATHNAME_UNIX]: do not insert host parts.

2003-07-01  Sam Steingold  <sds@gnu.org>

	* describe.lisp (describe1): better whitespace for documentation

2003-06-25  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (nobject_out1): accept third argument `level'
	(nobject_out): pass 5 as the level to avoid circularity problems

2003-06-24  Sam Steingold  <sds@gnu.org>

	* spvw_circ.d (get_circ_unmark, get_circ_mark): handle
	Rectype_Weakpointer separately

2003-06-24  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (nobject_out1): new function, extracted from